--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <h1>Get Gifs About Anything!</h1>
     <label for="keyword">Enter a search term:</label>
     <input id="keyword" type="text">
-    <button class="btn-outline-success" id="keywordSubmit">Get my gifs!</button>
+    <button class="btn btn-outline-success" id="keywordSubmit">Get my gifs!</button>
     <div class="showErrors"></div>
     <div class="showResults"></div>
   </div>
