--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
 <body>
   <div class="container">
     <h1>Get Gifs About Anything!</h1>
-    <label for="keyword">Enter a search term:</label>
-    <input id="keyword" type="text">
-    <button class="btn btn-outline-success" id="keywordSubmit">Get my gifs!</button>
+    <form id="submit">
+      <label for="keyword">Enter a search term:</label>
+      <input id="keyword" type="text">
+      <button class="btn btn-outline-success" id="keywordSubmit">Get my gifs!</button>
+    </form>
     <div class="showErrors"></div>
     <div class="showResults"></div>
   </div>
