Make three options for keyword term, random image and trending images
Co-authored-by: Eric Stratton <strattonericj@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
       <input id="keyword" type="text">
       <button class="btn btn-outline-success" id="keywordSubmit">Get my gifs!</button>
     </form>
+    <form id="trending">
+      <button class="btn btn-outline-danger" id="trendingSubmit">Get trending gifs!</button>
+    </form>
+    <form id="random">
+      <button class="btn btn-outline-warning" id="randomSubmit">Get a random gif!</button>
+    </form>  
     <div class="showErrors"></div>
     <div class="showResults"></div>
   </div>
